# contacts-proj

./: .coverage  .gitignore  README.md  docker-compose.yml  pyproject.toml  test.db
app/: main.py  v2.py
app/config/: __init__.py  configurate.py  logger.py  messages.py  pack_roles.py
app/db/: __init__.py  get_rab_con.py  get_session.py
app/depend/: roles_dependies.py
app/middleware/: middleware_set.py
app/models/: __init__.py  base_model.py  contact_model.py  token_model.py  users_model.py
app/repository/: contacts.py  users.py
app/routers/: auth.py  configurate.py  contacts.py  users.py
app/services/: auth_serv.py  base.py  email_serv.py  jwt_serv.py  password_serv.py
app/services/rabbit_send/: produse.py  v.py  worker.py
app/shemas/: contact.py  password.py  token.py  user.py
app/templates/: home.html
app/templates/email/: email_confirm.html
app/templates/pasw/: form_input_password.html  pasw_reset.html
docs/source/: conf.py
migrations/: env.py
migrations/versions/: 1599c3d5cc1d_initial_migration.py  56fb3e56038f_rename_table.py  7e7ac79cf9c8_обновил_модели_записей_роскоментировал_.py  925e491cb6dc_degrade_table_contacts.py  f4ce4315d87e_добавил_полле_date_birthday_в_модель_.py  ff700fb09fa7_degrade_table_contacta_date_bith.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16397  16399  16405  16406  16408  16427  16429  16435  16436  16443  16444  16446  16452  16453  16460  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2619_vm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  (+17 more)
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
script/: check_token.py  get_structure.py  test_send_message.py
tests/: conftest.py
tests/test_db/: test_connection_rabbit.py
tests/test_repo/: test_contact.py  test_user.py
tests/test_repository/: test_user.py
tests/test_routes/: test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py
